# Rudiron_Arduino_Core

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake  boards.txt  installed.json  legal.py  platform.txt  post_install.bat
core/: Arduino.h  CDC.cpp  HardwareSerial.cpp  HardwareSerial.h  HardwareSerial_private.h  HardwareTimer.cpp  HardwareTimer.h  IPAddress.cpp  IPAddress.h  PluggableUSB.h  Print.cpp  Print.h  Print.hpp  Stream.cpp  Stream.h  Tone.cpp  USBAPI.h  USBCore.cpp  USBCore.h  USBDesc.h  WCharacter.h  WInterrupts.c  WInterrupts.cpp  WInterrupts.h  WMath.cpp  WSerial.cpp  WString.cpp  WString.h  abi.cpp  board.h  hooks.cpp  main.cpp  variant.h  wiring.cpp  wiring_analog.c  wiring_analog.cpp  wiring_digital.cpp  wiring_private.h  wiring_pulse.c  wiring_pulse.cpp  (+2 more)
core/milandr/: adc.cpp  adc.h  adc.hpp  can.cpp  can.hpp  clk.cpp  clk.h  clk.hpp  gpio.c  gpio.cpp  gpio.h  gpio.hpp  gpiomap.cpp  gpiomap.hpp  spi.cpp  spi.hpp  timer.cpp  timer.hpp  timerutility.cpp  timerutility.h  timerutility.hpp  uart.cpp  uart.hpp
core/milandr/Core/: Print.cpp  WMath.cpp
core/rudiron/: adc.cpp  adc.h  adc_types.h  can.cpp  can.h  clk.cpp  clk.h  dac.cpp  dac.h  dac_types.h  gpio.cpp  gpio.h  gpio_types.h  interrupt.h  nrf24.cpp  nrf24.h  spi.cpp  spi.h  tasks_timer.h  timer.cpp  timer.h  timerutility.cpp  timerutility.h  uart.cpp  uart.h
cores/arduino/: Arduino.h  CDC.cpp  Client.h  HardwareSerial.cpp  HardwareSerial.h  HardwareSerial_private.h  IPAddress.cpp  IPAddress.h  PluggableUSB.cpp  PluggableUSB.h  Print.cpp  Print.h  Printable.h  Server.h  Stream.cpp  Stream.h  Tone.cpp  USBAPI.h  USBCore.cpp  USBCore.h  USBDesc.h  Udp.h  WCharacter.h  WInterrupts.cpp  WMath.cpp  WString.cpp  WString.h  abi.cpp  binary.h  hooks.cpp  main.cpp  new.cpp  new.h  wiring.cpp  wiring_analog.cpp  wiring_digital.cpp  wiring_private.h  wiring_pulse.cpp  wiring_shift.cpp
cores/arduino/rudiron/: adc.cpp  adc.h  adc_types.h  can.cpp  can.h  can_types.h  clk.cpp  clk.h  dac.cpp  dac.h  dac_types.h  dma_types.h  gpio.cpp  gpio.h  gpio_types.h  interrupt.cpp  interrupt.h  interrupt_types.h  ssp.cpp  ssp.h  tasks_timer.cpp  tasks_timer.h  timer.cpp  timer.h  timer_types.h  uart.cpp  uart.h  uart_types.h
cores/arduino/system/: MDR32F9Qx_it.cpp  MDR32F9Qx_it.h
examples/display/basic/: sketch.cpp
examples/display_basic/: display_sketch.cpp  display_sketch.h  sketch.cpp
examples/esp01/HTTPGET/: sketch.cpp
examples/nrf24_tank/: tank_receiver_sketch.cpp  tank_receiver_sketch.h  tank_transmitter_sketch.cpp  tank_transmitter_sketch.h
examples/nrf24_tank/receiver/: sketch.cpp
examples/self_driving_car/: converter.h  directions.h  distance.cpp  distance.h  driver.cpp  driver.h  movement.cpp  movement.h  navigation.cpp  navigation.h  rangefinder.cpp  rangefinder.h  self_driving_car_sketch.cpp  self_driving_car_sketch.h  sketch.cpp  sketch.h  tests.cpp
libraries/Adafruit_BusIO/: Adafruit_BusIO_Register.cpp  Adafruit_BusIO_Register.h  Adafruit_I2CDevice.cpp  Adafruit_I2CDevice.h  Adafruit_I2CRegister.h  Adafruit_SPIDevice.cpp  Adafruit_SPIDevice.h
libraries/Adafruit_GFX_Library/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_GrayOLED.cpp  Adafruit_GrayOLED.h  Adafruit_SPITFT.cpp  Adafruit_SPITFT.h  Adafruit_SPITFT_Macros.h  gfxfont.h  glcdfont.c
libraries/Adafruit_GFX_Library/Fonts/: FreeMono12pt7b.h  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeMonoBoldOblique18pt7b.h  FreeMonoBoldOblique24pt7b.h  FreeMonoBoldOblique9pt7b.h  FreeMonoOblique12pt7b.h  FreeMonoOblique18pt7b.h  FreeMonoOblique24pt7b.h  FreeMonoOblique9pt7b.h  FreeSans12pt7b.h  FreeSans18pt7b.h  FreeSans24pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h  FreeSansBold9pt7b.h  (+28 more)
libraries/Adafruit_ILI9341/: Adafruit_ILI9341.cpp  Adafruit_ILI9341.h
libraries/Adafruit_MPU6050/: Adafruit_MPU6050.cpp  Adafruit_MPU6050.h
libraries/Adafruit_ST7735_and_ST7789_Library/: Adafruit_ST7735.cpp  Adafruit_ST7735.h  Adafruit_ST7789.cpp  Adafruit_ST7789.h  Adafruit_ST77xx.cpp  Adafruit_ST77xx.h  README.txt
libraries/Adafruit_Unified_Sensor/: Adafruit_Sensor.cpp  Adafruit_Sensor.h
libraries/Dynamixel/: Dynamixel.h  DynamixelControlTable.h
libraries/ESP_AT_Lib/: ESP_AT_Debug.h  ESP_AT_Lib.h  ESP_AT_Lib_Impl.h
libraries/FastLED/: FastLED.cpp  FastLED.h  fastpin.h  led_sysdefs.h  platforms.cpp  platforms.h
libraries/MPU6050/: I2Cdev.cpp  I2Cdev.h  MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps20.h  MPU6050_6Axis_MotionApps_V6_12.h  MPU6050_9Axis_MotionApps41.h  helper_3dmath.h
libraries/SD/: File.cpp  SD.cpp  SD.h
libraries/SPI/: SPI.cpp  SPI.h
libraries/Servo/: Servo.cpp  Servo.h
libraries/Wire/: Wire.cpp  Wire.h
libraries/arduino_timer/: arduino-timer.h
libraries/nrf24l01/: README.MD  nrf24.cpp  nrf24.h  nrf24l01.cpp  nrf24l01.h
sketch/: rudiron_sketch.c  rudiron_sketch.cpp  sketch.cpp  sketch.h  sketch.hpp  sketch_rudiron.cpp  tank_receiver.cpp  tank_receiver.h  tank_receiver.hpp  tank_transmitter.cpp  tank_transmitter.h  tank_transmitter.hpp
system/MDR32F9Qx/: MDR32F9Qx_config.h  MDR32F9Qx_it.c  MDR32F9Qx_it.cpp  MDR32F9Qx_it.h  MDR_config.c  MDR_config.cpp  MDR_config.h  MDR_it.c  MDR_it.cpp  MDR_it.h
variants/Buterbrod/: gpio_map.cpp  gpio_map.h  pins_arduino.h  variant.cpp  variant.h
variants/MDR32F9Qx/: pins_arduino.h
variants/Rudiron_Buterbrod/: gpio_map.cpp  gpio_map.h  pins_arduino.h  variant.cpp
variants/Rudiron_Buterbrod_R9_16MHz/: MDR32F9Qx_config.h  adc_utility.cpp  adc_utility.h  config.cpp  config.h  dac_utility.cpp  dac_utility.h  gpio_utility.cpp  gpio_utility.h  interrupt_utility.cpp  interrupt_utility.h  pins_arduino.h  timer_utility.cpp  timer_utility.h  variant.cpp  variant.h
variants/Rudiron_Buterbrod_R9_20MHz/: MDR32F9Qx_config.h  adc_utility.cpp  adc_utility.h  config.cpp  config.h  gpio_utility.cpp  gpio_utility.h  interrupt_utility.h  pins_arduino.h  timer_utility.cpp  timer_utility.h  variant.cpp  variant.h
(+284 files in other folders)
